# pymatgen

./: .coderabbit.yaml  .coverage.Bens-MacBook-Pro-4.local.29966.XbJWOdRx  .coverage.ZYZhu-M40.dhcp.lbl.gov.36776.XWbBpJZx  .coveragerc  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  ADMIN.md  ADMIN.rst  CHANGES  CHANGES.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.rst  MANIFEST.in  PMG3_NOTES.md  README-tests.md  README-tests.rst  README.md  README.rst  README_INSTALL.md  README_REORGANIZATION.md  REORGANIZATION.md  SECURITY.md  _spglib.c  appveyor.yml  check_code_style.sh  circle.yml  copy_core.py  copy_files.sh  coverage.xml  create_structure_matcher_stub.py  (+43 more)
.circleci/: config.yml
.devcontainer/: README.md  devcontainer.json  repro_template.ipynb
.eggs/: spglib-1.9.9.44-py2.7-linux-x86_64.egg
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  code_of_conduct.md  dependabot.yml  release.yml
Docker/: Dockerfile
Fstar/: fstar.py
appveyor/: install.ps1
dependencies/spglib-1.6.0/src/: Makefile.am  Makefile.in  cell.h  kpoint.c  kpoint.h  mathfunc.c  pointgroup.c  refinement.c  site_symmetry.h  sitesym_database.c  spacegroup.c  spacegroup.h  spg_database.c  spglib.c  spglib.h  spin.c  spin.h  symmetry.h  tetrahedron_method.c  tetrahedron_method.h
dependencies/spglib-1.7.4/src/: Makefile.am  Makefile.in  debug.c  debug.h  hall_symbol.c  hall_symbol.h  kpoint.c  lattice.c  lattice.h  mathfunc.c  mathfunc.h  niggli.c  niggli.h  pointgroup.c  pointgroup.h  refinement.c  refinement.h  site_symmetry.c  sitesym_database.c  sitesym_database.h  spacegroup.c  spacegroup.h  spg_database.c  spg_database.h  spglib.c  spglib.h  spin.c  spin.h  symmetry.c  tetrahedron_method.c  triplet_kpoint.c  triplet_kpoint.h
dependencies/spglib-1.9.0/src/: Makefile.am  Makefile.in  cell.c  kpoint.c  mathfunc.c  niggli.c  niggli.h  pointgroup.c  primitive.c  spg_database.c  spglib.c  spglib.h  symmetry.c  version.h
dependencies/spglib-1.9.1/: ChangeLog  Makefile.am  Makefile.in  _spglib.c  configure  configure.ac
dependencies/spglib-1.9.1/src/: Makefile.am  Makefile.in  cell.c  lattice.c  lattice.h  niggli.h  pointgroup.c  pointgroup.h  primitive.c  refinement.c  site_symmetry.c  spacegroup.c  spglib.c  spglib.h  spin.c  symmetry.c  version.h
dependencies/spglib-1.9.2/src/: Makefile.am  Makefile.in  cell.c  cell.h  debug.c  debug.h  delaunay.c  delaunay.h  hall_symbol.c  hall_symbol.h  kgrid.c  kgrid.h  kpoint.c  kpoint.h  mathfunc.c  mathfunc.h  niggli.c  pointgroup.c  pointgroup.h  primitive.c  primitive.h  refinement.c  refinement.h  site_symmetry.c  site_symmetry.h  sitesym_database.c  sitesym_database.h  spacegroup.c  spacegroup.h  spg_database.c  spg_database.h  spglib.c  spglib.h  spin.c  spin.h  symmetry.c  symmetry.h  test.c  version.h
dev_scripts/: all_basis_functions_pbeVaspFit2015_lobster.txt  build_conda.bat  build_conda.sh  bvparm2011  bvparm2011.json  clean_test_files.py  electron_affinities.yaml  force_unicode.py  gen_pt_json.py  generate_periodic_table_json.py  generate_periodic_table_yaml_json.py  generate_ptable_json.py  get_lobster_basis_from_potcars.py  ionic_radii.csv  make_bv_data.py  nist_codata.txt  oxidation_states.txt  periodic_table.db  periodic_table.json  periodic_table.yaml  physical_constants_nist.txt  potcar_scrambler.py  profile_structure.py  profile_xml.py  radii.csv  regen_libxcfunc.py  sqlite_pt.py  update_pt_data.py  update_spacegroup_data.py  ~$Shannon Radii.xlsx
docs/: 2023-10-07-top-contributors.csv  CHANGES.md  CNAME  Gemfile  Makefile  SECURITY.md  _config.yml  addons.html  addons.md  change_log.html  change_log.rst  changelog.rst  citations.rst  compatibility.md  (+804 more)
extensions/spglib-1.1.2/src/: ChangeLog  Makefile.am  lattice.c  lattice.h  mathfunc.c  mathfunc.h  primitive.c  primitive.h  refinement.c  spacegroup.c  spglib.c  spglib.h  spglib_f.c  symmetry.c  symmetry.h
extensions/spglib-1.2/: config.h.in  configure.ac
extensions/spglib-1.2/python/ase/examples/: example_ase.py
extensions/spglib-1.2/python/ase/test/: atoms.py  vasp.py
extensions/spglib-1.2/src/: primitive.h
pymatgen-analysis/: pyproject.toml  setup.py
pymatgen-analysis/src/pymatgen/analysis/: .gitkeep  structure_matcher.py
pymatgen-apps/: pyproject.toml  setup.py
pymatgen-apps/src/pymatgen/apps/battery/: insertion_battery.py
pymatgen-apps/src/pymatgen/apps/borg/: hive.py
pymatgen-apps/src/pymatgen/cli/: feff_plot_dos.py  pmg.py  pmg_structure.py
pymatgen-core/: pyproject.toml  setup.py
pymatgen-core/src/pymatgen/alchemy/: filters.py
pymatgen-core/src/pymatgen/command_line/: critic2_caller.py
pymatgen-core/src/pymatgen/core/: lattice.py  spectrum.py  surface.py
pymatgen-core/src/pymatgen/electronic_structure/: boltztrap2.py  cohp.py
pymatgen-core/src/pymatgen/entries/: MPCompatibility.yaml  compatibility.py  computed_entries.py
pymatgen-core/src/pymatgen/io/: ase.py  cif.py  fiesta.py  lmto.py  optimade.py  prismatic.py  res.py
pymatgen-core/src/pymatgen/io/abinit/: abitimer.py  variable.py
pymatgen-core/src/pymatgen/io/cp2k/: __init__.py
pymatgen-core/src/pymatgen/io/feff/: inputs.py  sets.py
pymatgen-core/src/pymatgen/io/jdftx/: jminsettings.py
pymatgen-core/src/pymatgen/io/lammps/: CoeffsDataType.yaml  sets.py
pymatgen-core/src/pymatgen/io/qchem/: sets.py  utils.py
pymatgen-core/src/pymatgen/io/vasp/: MITRelaxSet.yaml  potcar-summary-stats.json.bz2
pymatgen-core/src/pymatgen/io/xtb/: outputs.py
pymatgen-core/src/pymatgen/phonon/: bandstructure.py  dos.py  thermal_displacements.py
pymatgen-core/src/pymatgen/transformations/: advanced_transformations.py  transformation_abc.py
pymatgen-core/src/pymatgen/util/: string.py  typing.py
pymatgen-core/src/pymatgen/util/structures/: BaNiO3.json  Pb2TiZrO6.json  Sn.json
pymatgen-core/src/pymatgen/vis/: structure_chemview.py  structure_vtk.py
pymatgen-meta/: pyproject.toml  setup.py
pymatgen-meta/src/pymatgen/: .gitkeep  __init__.py
(+8531 files in other folders)
